<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".View.RegisterActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:backgroundTint="@color/bg"
        android:src="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MainLogoText"
        android:layout_marginBottom="20dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/AdminInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            style="@style/AdminInputText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AdminInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/username"
            style="@style/AdminInputText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AdminInputLayout"
        android:layout_marginBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            style="@style/AdminInputText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        style="@style/AdminButton"/>
</LinearLayout>