<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.LoginActivity"
    android:id="@+id/linearlayout_login">

    <TextView
        style="@style/MainLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AdminInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/AdminInputText"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AdminInputLayout"
       >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/AdminInputText"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/AdminButton"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg"
        android:fontFamily="@font/montserrat_medium"
        android:text="Create a new account"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>